--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!-- Sovellus luodaan AppComponentin sisälle -->
   <app-root></app-root>
 </body>
 </html>
